examples/k8stest/conf/HTTPRoute/Filters/Redirect/Gateway_edge_redirect-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: redirect-gateway
  namespace: edgion-test
  annotations:
    #  HTTP  HTTPS 
    edgion.io/http-to-https-redirect: "true"
    #  10443 
    edgion.io/https-redirect-port: "31011"
spec:
  gatewayClassName: public-gateway
  listeners:
    # HTTP  -  HTTPS
    - name: http-redirect
      protocol: HTTP
      port: 31040
